# fluent

./: .env.example  docker-compose.yaml
gateway/: Dockerfile  alembic.ini  pyproject.toml  start.sh
gateway/alembic/: env.py
gateway/alembic/versions/: 001_initial.py
gateway/gateway/: __main__.py  config.py  main.py
gateway/gateway/db/: connection.py  models.py
gateway/gateway/memory/: embeddings.py  extraction.py  retrieval.py  store.py
gateway/gateway/telephony/: twiml.py  validation.py  webhooks.py
gateway/gateway/text/: conversation.py  handler.py  llm_client.py
gateway/gateway/utils/: logging.py  phone.py
gateway/gateway/voice/: bridge.py  transcoder.py  transcript.py
gateway/tests/: test_extraction.py  test_llm_client.py  test_memory.py  test_transcoder.py
