[project]
name = "personaplex-gateway"
version = "0.1.0"
description = "Unified phone interface for PersonaPlex — voice calls + SMS with persistent memory"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "twilio>=9,<10",
    "asyncpg>=0.29,<1",
    "pgvector>=0.3,<1",
    "openai>=1.30,<2",
    "anthropic>=0.30,<1",
    "numpy>=1.26,<3",
    "soxr>=0.3,<1",
    "alembic>=1.13,<2",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "structlog>=24,<26",
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
